2005-09-24	Christian Hergert <christian.hergert@gmail.com>

	* vte/Vte.metadata: Fix Vte.Terminal.SetColors to reflect proper mapping
	to vte_terminal_set_colors. palette is now Gdk.Color[].
	* sample/VteTest.cs: Update to work with fixed parameter.
	* doc/en/Vte/Terminal.xml: Update vte docs to reflect parameter fix.

2005-09-23  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : expand glib-sharp-2.0.pc.
	* glib/glib-sharp-2.0.pc.in : new pc file template.
	* glib/Makefile.am : dist and install pc file.
	* gtk/gtk-sharp-2.0.pc.in : Require glib-sharp-2.0.

2005-09-21  Mike Kestner  <mkestner@novell.com>

	* bootstrap* : expose POLICY_VERSIONS variable.
	* configure.in.in : AC_SUBST new POLICY_VERSIONS.
	* Makefile.include : build/install policy assemblies.
	* policy.config.in : policy config skeleton.
	* */Makefile.am : ditto.

2005-09-19  Tambet Ingo  <tambet@ximian.com>

	* glib/Opaque.cs: Set owned property in any case. Generated code
	will set owned to false after unref.

2005-09-15  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : make gtkhtml-3.8 check >= 3.8.0.
	[Fixes #76119]

2005-09-15  Mike Kestner  <mkestner@novell.com>

	* glade/Glade.metadata : mark Interface.toplevels private to allow
	manual implementation.
	* glade/Interface.custom : add manual impl for Toplevels and obsolete
	old toplevels impl.
	* glade/Makefile.am : add new custom.

2005-09-15  Mike Kestner  <mkestner@novell.com>

	* parser/gapi-fixup.cs : warn on unmatched rules.  reworked from a Dan
	Winship patch.  [Fixes #76088]

2005-09-08  Dan Winship  <danw@novell.com>

	* gtk/Gtk.metadata: Hide Gtk.Drag.SetIconDefault. Mark
	Gtk.TreeView.GetVisibleRect's arg as "out".

	* gtk/Drag.custom: gtk_drag_set_icon_default(ctx) should translate
	to Gtk.Drag.SetIconDefault(ctx), not Gtk.Drag.IconDefault = ctx.

	* gtk/TreeView.custom: add obsolete GetVisibleRect()

2005-09-07  Mike Kestner  <mkestner@novell.com>

	* bootstrap : bump version for beta2.