@@ -363,7 +363,7 @@ public Pango.FontDescription FontDescription {
 
 		if (Raw == IntPtr.Zero)
 			return null;
-		Pango.FontDescription ret = (Pango.FontDescription) GLib.Opaque.GetOpaque (Raw);
+		Pango.FontDescription ret = (Pango.FontDescription) GLib.Opaque.GetOpaque (Raw, typeof (Pango.FontDescription), false);
 		if (ret == null)
 			ret = new Pango.FontDescription (Raw);
 		return ret;
