@@ -1,3 +1,11 @@
+2005-09-27  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Opaque.cs : remove the Opaques hash.  As f-spot demonstrated,
+	we cannot rely on a pointer continuing to point at the same type in
+	memory, since there is no destroy notification for most opaques.
+	* glib/Value.cs : use more explicit GetOpaque overload.
+	* gtk/Style.custom : use more explicit GetOpaque overload.
+
 2005-09-24	Christian Hergert <christian.hergert@gmail.com>
 
 	* vte/Vte.metadata: Fix Vte.Terminal.SetColors to reflect proper mapping
